# sg_project_template

./: .env.example  .gitignore  README.md  compose.yaml  hello.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  main.py  serve_api.py
app/database/: db_engine.py  db_models.py  db_test.py
app/domain/: data_models.py
app/src/: model_downloader.py  ui.py
app/test/: test_app.py
data/docs/: api_docs.MD
data/example_inputs/: example.txt  pyproject_basic.toml  pyproject_extras.toml
data/extras/: swagger_template.mustache
data/inputs/: .gitkeep
docker/: .dockerignore  Dockerfile  azure-pipelines.yml  build.Dockerfile  build.Dockerfile.dockerignore  docker-build.sh  docker-compose.yml  ui.Dockerfile
src/: config.py  main.py  main_api.py  main_ui.py  main_with_args.py
src/application/: llm_service.py  utils.py
src/application/api_services/: api_utils.py
src/application/llm_services/: llm_service.py
src/application/service_interfaces/: i_llm.py  llm_abstraction.py
src/application/services/: utils.py
src/domain/models/: data_classes.py  data_models.py  pydantic_schemas.py  sql_models.py
src/domain/repo_interfaces/: vectordb_repository.py
src/infra/: supabase_client.py
src/infra/database/: db_config.py  db_create.py  db_engine.py  db_models.py
src/infra/implementations/: qdrant_repository.py
src/infra/persistence/: pgvector_repository.py  qdrant_repository.py
src/infra/postgres/: create_vdb.py  create_vdb_async.py  create_vdb_monad.py  create_vdb_sync.py  database.py  database_async.py  database_sync.py  db_operations.py
src/infra/postgres/repo_implementations/: qdrant_repository.py
src/infra/postgres/vectordb/: vdb_async.py  vdb_sync.py  vdb_with_cursor.py
src/infra/repo_implementations/: pgvector_repository.py  qdrant_repository.py
src/notebooks/: trial.ipynb
src/presentation/: bootstrap.py  dependencies.py
src/presentation/rest/: schemas.py  serve_api.py
src/presentation/rest/routers/: items.py
src/presentation/ui/: app_ui.py  css.py  gradio_ui.py  ui_with_multimodal.py
src/presentation/ui/asset/: custom_ui.css
src/presentation/ui/assets/: custom_js.py
src/sgproject/: main.py
src/sgproject/application/: utils.py
src/sgproject/application/services/: llm_services.py
src/sgproject/domain/models/: data_models.py
src/sgproject/infra/database/: db_config.py  db_engine.py  db_models.py  db_test.py
src/sgproject/presentation/ui/: asset.py  gradio_ui.py
src/sgproject/tests/: conftest.py  pytest.ini  test_api.py
src/tests/: test_api.py
src/tests/integration/: test_database_adapter.py  test_external_api_adapter.py  test_ui_adapter.py
src/tests/unit/: test_domain_services.py
tests/: conftest.py  pytest.ini  test_api.py  test_db.py  test_mocked_llm.py  test_static.py
