[project]
name = "sg-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.6",
    "gradio==5.12.0",
    "haystack-ai>=2.9.0",
    "loguru>=0.7.2",
    "numpy==2.1.3",
    "ollama-haystack>=0.0.7",
    "opencv-python>=4.10.0.84",
    "pydantic==2.8.2",
    "pypdf>=5.1.0",
    "python-dotenv==1.0.1",
    "qdrant-haystack>=7.0.0",
    "sentence-transformers>=3.3.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "pyproject-toml>=0.0.12",
    "pytest>=8.3.3",
]

# filter dependencies warnings and future warnings
[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
