[project]
name = "sg-project-template"
authors = [
    { name = "Süleyman Gölbol"}
]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio==5.20.0",
    "haystack-ai>=2.15.2",
    "lingua-language-detector==2.0.2",
    "loguru==0.7.3",
    "matplotlib<=3.10.0",
    "ollama-haystack==0.0.7",
    "pandas[excel]==2.2.3",
    "python-dotenv>=1.0.1",
    "qdrant-haystack==8.1.0",
    "ring>=0.10.1",
    "sentence-transformers==3.4.1",
    "tabulate==0.9.0",
    "transformers==4.49.0",
    "gradio-log>=0.0.8",
    "overrides>=7.7.0",
    "pypdf>=5.3.1",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
    "asyncpg>=0.30.0",
    "pytest-cov>=6.2.1",
    "sympy>=1.13.1",
    "pytest-asyncio>=1.1.0",
    "psycopg2>=2.9.10",
    "pgvector>=0.4.1",
    "pgvector-haystack>=5.2.1",
]


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "pdoc3>=0.11.5",
    "matplotlib>=3.9.2",
    "pyproject-toml>=0.0.12",
    "pytest>=8.3.3",
    "pyright>=1.1.403",
]


[project.optional-dependencies]
cpu = [
  "torch==2.5.1",
]
gpu = [
  "torch==2.5.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"
conflicts = [ # type:ignore
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
pythonpath = "." # Add the project root path to the pythonpath [to be able to import the 'src' module]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning", "ignore::PendingDeprecationWarning"]

[tool.autopep8]
max_line_length = 150
